opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-gstreamer"
bug-reports: "https://github.com/savonet/ocaml-gstreamer/issues"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
flags: light-uninstall
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make clean]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "gstreamer"]
depexts: [
  ["gstreamer1-dev" "gst-plugins-base1-dev"] {os-distribution = "alpine"}
  ["gstreamer" "gstreamer-plugins-base"] {os-distribution = "opensuse"}
  ["gstreamer" "gstreamer-plugins-base"] {os-distribution = "fedora"}
  ["gstreamer" "gstreamer-plugins-base"] {os-distribution = "centos"}
  ["libgstreamer1.0-dev" "libgstreamer-plugins-base1.0-dev"]
    {os-distribution = "debian"}
  ["libgstreamer1.0-dev" "libgstreamer-plugins-base1.0-dev"]
    {os-distribution = "ubuntu"}
  ["gstreamer" "gst-plugins-base"]
    {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-gstreamer.git"
