opam-version: "2.0"
name: "gstreamer"
version: "0.3.1"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-gstreamer"
bug-reports: "https://github.com/savonet/ocaml-gstreamer/issues"
synopsis:
  "Bindings for the GStreamer library which provides functions for playning and manipulating multimedia streams"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [make "install"]
depexts: [
  ["gstreamer-dev" "gst-plugins-base-dev"] {os-distribution = "alpine"}
  ["gstreamer-devel" "gstreamer-plugins-base-devel"]
    {os-family = "suse"}
  ["gstreamer1-devel" "gstreamer1-plugins-base-devel"]
    {os-distribution = "fedora"}
  ["gstreamer1-devel" "gstreamer1-plugins-base-devel"]
    {os-distribution = "centos"}
  ["libgstreamer1.0-dev" "libgstreamer-plugins-base1.0-dev"]
    {os-distribution = "debian"}
  ["libgstreamer1.0-dev" "libgstreamer-plugins-base1.0-dev"]
    {os-distribution = "ubuntu"}
  ["gstreamer1"] {os = "freebsd"}
  ["gstreamer" "gst-plugins-base"]
    {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-gstreamer.git"
